# libcintelhex

./: meson.build
src/: ihex_copy.c
